# deliver-no-matter-what

./: .gitignore  CLAUDE.md  Dockerfile  README.md  config.toml  pyproject.toml  render.yaml  vercel.json
.github/workflows/: keepalive.yml  update-badges.yml  update_badges.yml
data/: daily_totals.json  tzevaadom_messages.csv
site/: dashboard.html  index.html
src/am_israel_hai_badge/: api.py  badge.py  cache.py  config.py  db.py  main.py  normalize.py  shelter.py  update_badges.py
src/am_israel_hai_badge/web/: app.py  auth.py  cache.py  db.py  worker.py
src/am_israel_hai_badge/web/templates/: dashboard.html  landing.html
supabase/: rls_setup.sql
supabase/functions/init-badge/: index.ts
supabase/functions/serve-areas/: index.ts
supabase/functions/serve-badge/: index.ts
tests/: test_normalize.py  test_shelter.py
