[project]
name = "am_israel_hai_badge"
version = "0.1.0"
requires-python = ">= 3.11.9"
dependencies = []

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "python-multipart>=0.0.9", "psycopg2-binary>=2.9"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
